--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/web.config
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="psi_project" />
+        <add namespace="WebAppProjeto01G1" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
