--- a/WebAppProjeto01G1/Serviço/Serviço.csproj
+++ b/WebAppProjeto01G1/Serviço/Serviço.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FF76BE50-DA54-44E6-A161-37E665093963}</ProjectGuid>
+    <ProjectGuid>{18BE7751-6C43-4783-8F0B-4FECC6A7E734}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Persistenciaa</RootNamespace>
-    <AssemblyName>Persistenciaa</AssemblyName>
+    <RootNamespace>Serviço</RootNamespace>
+    <AssemblyName>Serviço</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,14 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,11 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contexts\EFContext.cs" />
-    <Compile Include="DAL\Cadastros\FabricanteDAL.cs" />
-    <Compile Include="DAL\Cadastros\ProdutoDAL.cs" />
-    <Compile Include="DAL\Tabelas\CategoriaDAL.cs" />
+    <Compile Include="Cadastros\ProdutoServico.cs" />
+    <Compile Include="Cadastros\FabricanteServico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tabelas\CategoriaServico.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -60,10 +52,10 @@
       <Project>{fee39686-8643-4c58-a9a2-cc9004d3704a}</Project>
       <Name>Modelo</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Persistenciaa\Persistenciaa.csproj">
+      <Project>{ff76be50-da54-44e6-a161-37e665093963}</Project>
+      <Name>Persistenciaa</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
