--- a/WebAppProjeto01G1/Persistenciaa/Persistenciaa.csproj
+++ b/WebAppProjeto01G1/Persistenciaa/Persistenciaa.csproj
@@ -57,9 +57,18 @@
     <Compile Include="DAL\Cadastros\FabricanteDAL.cs" />
     <Compile Include="DAL\Cadastros\ProdutoDAL.cs" />
     <Compile Include="DAL\Tabelas\CategoriaDAL.cs" />
+    <Compile Include="Migrations\202210241224548_InitialCreate.cs" />
+    <Compile Include="Migrations\202210241224548_InitialCreate.Designer.cs">
+      <DependentUpon>202210241224548_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202210241224548_InitialCreate.resx">
+      <DependentUpon>202210241224548_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\Modelo.csproj">
       <Project>{fee39686-8643-4c58-a9a2-cc9004d3704a}</Project>
