--- a/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
@@ -14,9 +14,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
   <connectionStrings>
-    <add name="Asp_Net_MVC_CS" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=laizpsi;User id=SA;Password=senha@123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Asp_Net_MVC_CS" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=laizpsi;User id= sa;Password=Senha@123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
