--- a/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Asp_Net_MVC_CS" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=laizpsi;User id= sa;Password=Senha@123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Asp_Net_MVC_CS" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=laizpsi;User id=sa; Password=senha@123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.web>
