--- a/WebAppProjeto01G1/WebAppProjeto01G1/WebAppProjeto01G1.csproj
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/WebAppProjeto01G1.csproj
@@ -221,7 +221,6 @@
     <Content Include="Views\Produto\Edit.cshtml" />
     <Content Include="Views\Produto\Details.cshtml" />
     <Content Include="Views\Produto\Delete.cshtml" />
-    <Content Include="Views\Produto\_PorCategoria.cshtml" />
     <Content Include="Views\Produto\_PorFabricante.cshtml" />
     <Content Include="Views\Fabricantes\Create.cshtml" />
     <Content Include="Views\Fabricantes\Delete.cshtml" />
@@ -237,6 +236,7 @@
     <Content Include="Views\Produto\_PartialEditContentPanel.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Fabricantes\_PorCategrias.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
