--- a/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Web.config
@@ -13,9 +13,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AppStartup" value="WebAppProjeto01G1.IdentityConfig" />
   </appSettings>
   <connectionStrings>
     <add name="Asp_Net_MVC_CS" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=laizpsi;User id=sa; Password=senha@123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="IdentityDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=IdentityDB;User id=sa; Password=senha@123;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -34,6 +36,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
