--- a/WebAppProjeto01G1/WebAppProjeto01G1/WebAppProjeto01G1.csproj
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/WebAppProjeto01G1.csproj
@@ -268,7 +268,9 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Cadastros\CadastrosAreaRegistration.cs" />
+    <Compile Include="Areas\Seguranca\Controllers\AccountController.cs" />
     <Compile Include="Areas\Seguranca\Controllers\AdminController.cs" />
+    <Compile Include="Areas\Seguranca\Models\Papel.cs" />
     <Compile Include="Areas\Seguranca\Models\SegurancaViewModels.cs" />
     <Compile Include="Areas\Seguranca\Models\Usuario.cs" />
     <Compile Include="Areas\Seguranca\SegurancaAreaRegistration.cs" />
@@ -323,6 +325,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Cadastros\Data\" />
     <Folder Include="Areas\Seguranca\Data\" />
+    <Folder Include="Areas\Seguranca\Views\Account\" />
+    <Folder Include="Areas\Seguranca\Views\Admin2\" />
     <Folder Include="Areas\Tabelas\Data\" />
     <Folder Include="Views\Seguranca\" />
   </ItemGroup>
